--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,7 @@ pdfcreator={pdflatex, or other tool}]{hyperref} %insert links to sections and fo
 
 % -----   DOKUMENT START ------ %
 \begin{document}
-teest
+tees\\
+my supercool pdf file change xD
 \input{sec.tex}
 \end{document}
