--- a/main.tex
+++ b/main.tex
@@ -71,6 +71,7 @@ pdfcreator={pdflatex, or other tool}]{hyperref} %insert links to sections and fo
 % -----   DOKUMENT START ------ %
 \begin{document}
 tees\\
-my supercool pdf file change xD
+my supercool pdf file change xD\\
+latest build test\\
 \input{sec.tex}
 \end{document}
